Fix text overflow on song titles

--- a/lstn/static/sass/app.scss
+++ b/lstn/static/sass/app.scss
@@ -562,6 +562,12 @@ body {
   @include display-flex;
 }
 
+.chat__track, .chat__artist {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .chat__message__message-type {
   @include flex-grow(1);
 }
